# benchmark

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.cpp
.cache/clangd/index/: main.cpp.5908A96C74AD1099.idx  timer.cpp.EAEF6D95318AD263.idx  timer.h.F35E96228AEBB580.idx
.github/workflows/: cmake-multi-platform.yml
Benchtools/: CMakeLists.txt
Benchtools/Core/: CMakeLists.txt
Benchtools/Core/include/Benchtools/Core/: Time.hpp
Benchtools/Core/src/: FileStream.cpp  Time.cpp
Benchtools/Logger/: CMakeLists.txt
Benchtools/Logger/src/: Logger.cpp
Benchtools/Test/: CMakeLists.txt  main.cpp
Benchtools/Timer/: CMakeLists.txt
Benchtools/Timer/include/Benchtools/: LoggingTimer.hpp  ScopedTimer.hpp  Time.hpp  Timer.hpp  Timers.hpp  WatchTimer.hpp
Benchtools/Timer/include/Benchtools/Timers/: BaseTimer.hpp  CPUTimer.hpp  LoggerTimer.hpp  LoggingTimer.hpp  ScopedTimer.hpp  Timer.hpp  Timers.hpp  WatchTimer.hpp
Benchtools/Timer/src/: BaseTimer.cpp  CPUTimer.cpp  LoggerTimer.cpp  ScopedTimer.cpp  Time.cpp  Timer.cpp  WatchTimer.cpp
Benchtools/app/: CMakeLists.txt  main.cpp
Benchtools/cmake/: BenchtoolsConfig.cmake.in
benchtools/: CMakeLists.txt
benchtools/Core/: CMakeLists.txt
benchtools/Core/src/: FileStream.cpp  Time.cpp
benchtools/Logger/: CMakeLists.txt
benchtools/Logger/src/: Logger.cpp
benchtools/Test/: CMakeLists.txt  example.cpp  main.cpp
benchtools/Timer/: CMakeLists.txt
benchtools/Timer/include/benchtools/Timers/: BaseTimer.hpp  WallTimer.hpp
benchtools/Timer/src/: BaseTimer.cpp  ClockTimer.cpp  LoggerTimer.cpp  ScopedTimer.cpp  WallTimer.cpp
benchtools/cmake/: BenchtoolsConfig.cmake.in
benchtools/headers/: benchmark.h  timer.h
benchtools/src/: timer.cpp
cmake/: benchtoolsConfig.cmake.in
include/benchtools/: Timers.hpp
include/benchtools/Core/: CSVStream.hpp  Concepts.hpp  FileStream.hpp  LogType.hpp  Time.hpp
include/benchtools/Loggers/: FileLogger.hpp  Logger.hpp
include/benchtools/Timers/: BaseTimer.hpp  ClockTimer.hpp  FileTimer.hpp  LoggerTimer.hpp  ScopedTimer.hpp  WallTimer.hpp
src/: CMakeLists.txt
src/Core/: FileStream.cpp  Time.cpp
src/Logger/: FileLogger.cpp
src/Loggers/: FileLogger.cpp
src/Test/: Test.cpp
src/Timer/: ClockTimer.cpp  ScopedTimer.cpp  WallTimer.cpp
src/Timers/: BaseTimer.cpp  ClockTimer.cpp  LoggerTimer.cpp
